# SAGE-Docs

./: .gitignore  404.html  CHANGELOG.md  Makefile  README.md  build.sh  fetch_benchmark_data.py  hello_world.py  index.html  leaderboard.css  mkdocs.yml  pyproject.toml  quickstart.sh  sitemap.xml  styles.css
.github/agents/: sage-docs.agent.md
.github/workflows/: deploy.yml
404/: index.html
about/: index.html
api-reference/: index.html
assets/: demo-gateway.cast  demo-local.cast  sage-full-demo.cast
docs_src/: 404.md  about.md
docs_src/api-reference/: index.md
docs_src/api-reference/platform/: index.md
docs_src/assets/: demo-distributed.cast  demo-install.cast
docs_src/community/: intellistream.md
docs_src/concepts/architecture/: package-structure.md
docs_src/concepts/architecture/design-decisions/: flownet-migration-boundary.md  (+2 more)
docs_src/data/: leaderboard_single.json
docs_src/developers/: test-taxonomy.md
docs_src/getting-started/: flownet-migration-guide.md  index.md  installation.md
docs_src/guides/: index.md
docs_src/guides/deployment/: index.md
docs_src/tutorials/: index.md
docs_src/tutorials/advanced/: index.md
getting-started/: index.html
guides/: index.html
hooks/: pre-push
sage_pub_docs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
search/: search_index.json
tests/: test_legacy_terms.py
theme/: 404.html  index.html  leaderboard.css  styles.css
theme/assets/: hf-data-loader.js  leaderboard.js
tutorials/: index.html
tutorials/advanced/: index.html
tutorials/basic/streaming-101/: index.html
(+1 files in other folders)
